--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 
 p {
   color: #ffd369;
-
+  
 }
 
 link {
@@ -17,6 +17,7 @@ a {
 }
 table {
     color: #ffd369;
+
 }
 
 ol {
@@ -37,14 +38,27 @@ hr {
 
 
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+}
 
 h1 {
   color: #fce38a;
   font-family: system-ui;
+  text-align: center;
 
 }
 
 h3 {
+  color: #fce38a;
+  font-family: system-ui;
+  text-align: center;
+}
+h2{
+  text-align: center;
   color: #fce38a;
   font-family: system-ui;
 }
